force-app/main/default/objects/Associate_Record__c/fields/A_E_Fund_Application_Submitted__c.field-meta.xml
<CustomField>
    <fullName>A_E_Fund_Application_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A&amp;E Fund Application Submitted</label>
    <type>Checkbox</type>
</CustomField>