force-app/main/default/objects/Associate_Record__c/fields/A_E_Fund_Category__c.field-meta.xml
<CustomField>
    <fullName>A_E_Fund_Category__c</fullName>
    <label>A&amp;E Fund Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - English Language Proficiency</fullName>
            </value>
            <value>
                <fullName>2 - Cost of living</fullName>
            </value>
            <value>
                <fullName>3 - Relocation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>