force-app/main/default/objects/Associate_Record__c/fields/A_E_Fund_Confirmed_Amount__c.field-meta.xml
<CustomField>
    <fullName>A_E_Fund_Confirmed_Amount__c</fullName>
    <label>A&amp;E Fund Confirmed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>