force-app/main/default/objects/Associate_Record__c/fields/A_E_Fund_Payment_Made__c.field-meta.xml
<CustomField>
    <fullName>A_E_Fund_Payment_Made__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A&amp;E Fund Payment Made</label>
    <type>Checkbox</type>
</CustomField>