force-app/main/default/objects/Associate_Record__c/fields/A_E_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>A_E_Sub_Category__c</fullName>
    <label>A&amp;E Sub Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ELP Test</fullName>
            </value>
            <value>
                <fullName>ELP Coaching</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Food/Other</fullName>
            </value>
            <value>
                <fullName>Childcare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>