force-app/main/default/objects/Associate_Record__c/fields/May_Additionally_Teach_Text__c.field-meta.xml
<CustomField>
    <fullName>May_Additionally_Teach_Text__c</fullName>
    <label>May Additionally Teach Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>