force-app/main/default/objects/Associate_Record__c/fields/Qualified_to_Teach_Text__c.field-meta.xml
<CustomField>
    <fullName>Qualified_to_Teach_Text__c</fullName>
    <label>Qualified to Teach Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>