force-app/main/default/objects/Associate_Record__c/fields/Test_Text_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Text_Field__c</fullName>
    <label>Test Text Field</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>